# headc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yaml  publish.yaml
src/: cli.rs  main.rs
