[package]
name = "headc"
version = "0.1.0"
repository = "https://github.com/i2486174/headc"
readme = "README.md"
license-file = "LICENSE"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
